--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
-name: CI de prueba
+name: Release CI
 
 on:
-  push:
-    branches:
-      - pruebaDespliegue
+  release:
+    types: [published]
 
 jobs:
   unit-test-webapp:
@@ -12,32 +11,38 @@ jobs:
       run:
         working-directory: webapp
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+      - uses: codecov/codecov-action@v3
   unit-test-restapi:
     runs-on: ubuntu-latest
+    env:
+      MONGO_DB: ${{ secrets.MONGO_DB_URL }}
+      MONGO_TEST_DB: ${{ secrets.MONGO_TEST_DB_URL }}
+      SECRET: ${{ secrets.JWT_SECRET }}
+      PASSWD1: ${{ secrets.DB_TEST_USER_PASSWORD_1 }}
+      PASSWD2: ${{ secrets.DB_TEST_USER_PASSWORD_2 }}
     defaults:
       run:
         working-directory: restapi
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+      - uses: codecov/codecov-action@v3
   # e2e-tests:
   #   needs: [unit-test-webapp, unit-test-restapi]
   #   runs-on: ubuntu-latest
   #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-node@v2
+  #   - uses: actions/checkout@v3
+  #   - uses: actions/setup-node@v3
   #     with:
   #       node-version: 16
   #   - run: npm --prefix webapp install
@@ -47,12 +52,12 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test-webapp]
     # needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
+      uses: elgohr/Publish-Docker-Github-Action@v4
       with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
@@ -62,13 +67,13 @@ jobs:
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
     # needs: [e2e-tests]
+    needs: [unit-test-restapi]
     steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      with:
+      - uses: actions/checkout@v3
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@v4
+        with:
           name: arquisoft/dede_es4c/restapi
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
@@ -88,11 +93,11 @@ jobs:
       - name: Deploy over SSH
         uses: fifsky/ssh-action@master
         with:
-          host: ${{ secrets.DEPLOY_HOST2 }}
-          user: ${{ secrets.DEPLOY_USER2 }}
-          key: ${{ secrets.DEPLOY_KEY }}
+          host: ${{ secrets.DEPLOY_HOST }}
+          user: ${{ secrets.DEPLOY_USER }}
+          pass: ${{ secrets.DEPLOY_PASSWORD }}
           command: |
-            wget https://raw.githubusercontent.com/arquisoft/dede_es4c/pruebaDespliegue/docker-compose-deploy.yml -O docker-compose.yml
+            wget https://raw.githubusercontent.com/arquisoft/dede_es4c/master/docker-compose-deploy.yml -O docker-compose.yml
             docker-compose stop
             docker-compose rm -f
             docker-compose pull   
