--- a/.github/workflows/https.yml
+++ b/.github/workflows/https.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v4
       env:
-        API_URI: https://${{ secrets.DEPLOY_HOST2 }}:5000/api
-        WEBAPP_URI: https://${{ secrets.DEPLOY_HOST2 }}:3000
+        API_URI: https://dede-es4c.centralus.cloudapp.azure.com:5000/api
+        WEBAPP_URI: https://dede-es4c.centralus.cloudapp.azure.com:3000
         PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
         CERTIFICATE: ${{ secrets.CERTIFICATE }}
       with:
